<resources>
    <string name="app_name">Kozinti</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btnlogin">Login</string>
    <string name="register">Register</string>
    <string name="btnRegister">Register</string>
    <string name="you_already_have_an_account">You already have an account ?</string>
    <string name="you_are_new_here">You are new here ?</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_your_email">Confirm your email</string>
    <string name="birthdate">Birthdate</string>
    <string name="new_recipe">New Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="preparation_time">Preparation Time In Minutes</string>
    <string name="cuisine">Cuisine</string>
    <string name="category">Category</string>
    <string name="ingredients">Ingredients</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="search_for_delicious_meals">Search for delicious meals</string>
    <string name="by_category">By category</string>
    <string name="by_cuisine">By cuisine</string>
    <string name="select_category"> Select category</string>
    <string name="by_name">By Name</string>
    <string name="edit">Edit</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="old_password">Your Password</string>
    <string name="new_password">New Password</string>
    <string name="you_want_to_change_your_password">You want to change your password?</string>
    <string name="enter_as_guest">Enter as Guest</string>
    <string name="sign_up">Sign Up</string>
    <string name="show_password">Show password</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>