<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="25dp"
    android:background="@drawable/bg1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:src="@drawable/kozinti"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/Guest"
        android:text="@string/enter_as_guest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/eye_off"
            android:drawablePadding="80dp"
            android:drawableTint="?attr/colorControlNormal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/btnlogin"
        android:textColor="@color/bg_black"
        android:layout_marginTop="15dp"
        app:backgroundTint="@color/white"
        android:layout_width="100dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/RegisterNow"
        android:text="@string/you_are_new_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
