<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:layout_above="@+id/bottom"
        tools:ignore="ObsoleteLayoutParam">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewUserImage"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_margin="6dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="fitXY"
                android:src="@drawable/upload_picture" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/daySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_marginEnd="20dp" />

                <Spinner
                    android:id="@+id/monthSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_marginEnd="20dp" />

                <Spinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/old_password"
                    android:password="true"
                    android:drawableEnd="@drawable/eye_off" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:visibility="gone"
                    android:password="true"
                    android:drawableEnd="@drawable/eye_off" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:hint="@string/confirm_password"
                    android:password="true"
                    android:drawableEnd="@drawable/eye_off" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/edit"
                android:textColor="@color/black"
                app:backgroundTint="@color/white" />
            <TextView
                android:id="@+id/updatePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/you_want_to_change_your_password"
                android:textSize="15sp" />
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:src="@drawable/home_icon"
            android:padding="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:focusable="true"
            />

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:src="@drawable/profile_icon"
            android:focusable="true" />
    </LinearLayout>
</RelativeLayout>
