<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:visibility="gone"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/byRecipeName"
                android:text="@string/by_name"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/byCategory"
                android:text="@string/by_category"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/byCuisine"
                android:text="@string/by_cuisine"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filterLayout"
        android:visibility="gone"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search"
            android:hint="@string/search_for_delicious_meals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom"
        android:layout_below="@+id/searchLayout"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        tools:ignore="ObsoleteLayoutParam">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/YourRecipeRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:focusable="true" />
        </LinearLayout>

    </ScrollView>
    <Button
        android:id="@+id/cancelSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        android:textColor="@color/bg_black"
        android:layout_above="@id/bottom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:text="Cancel" />
    <LinearLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/home"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:clickable="true"
            android:src="@drawable/home_icon"
            android:padding="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:focusable="true"
            />

        <ImageView
            android:id="@+id/addRecipe"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:src="@drawable/add_icon"
            android:focusable="true" />

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:src="@drawable/profile_icon"
            android:focusable="true" />
    </LinearLayout>
</RelativeLayout>